# nom_bencode

./: Cargo.toml
.github/: dependabot.yml
benches/: bench.rs
src/: decode.rs  encode.rs  lib.rs
