[package]
name = "nom_bencode"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

[features]
# change to ["hashbrown"] if you want hashbrown hashmaps/hashsets
# instead of stdlib
default = []

[dependencies]
nom = "5.0"

[dev-dependencies]
criterion = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "bench"
harness = false

