[package]
name = "nom_bencode"
version = "0.2.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

[dependencies]
atoi = "0.4"
itoa = "1.0"
nom = "7.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3
